--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ button:hover::before {
    হাজার টাকার গাইড, টেস্টপেপার ও প্রশ্নব্যাংকের বিকল্প এখন
 CHORCHA APP
    </p>
-   <img src="ads.gif" width="100%">
+   <img src="ads.gif" alt="ads" width="100%">
   <h5>page visitors : </h5>   
  <h5 align"center"> <a> <img src="https://counter11.optistats.ovh/private/freecounterstat.php?c=rqb8amr36ynzhc3uehtmawuul58yd6pw" border="0" title="free web counter" alt="web counter"></a></h5>
  <p>................</p>
@@ -200,7 +200,7 @@ CHORCHA APP
  <!-- Popup content -->
 <div id="popup" class="popup">
   <a class="close-btn" onclick="closePopup()">X</a> <br>
-<a href="ads.gif" download ><img src="ads.gif" width="120%"> </a>
+<a href="ads.gif" download ><img src="ads.gif" alt="ads" width="120%"> </a>
 </div>
 
 <!-- Overlay -->
