--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ CHORCHA APP
  <!-- Popup content -->
 <div id="popup" class="popup">
   <a class="close-btn" onclick="closePopup()">X</a> <br>
-<a href="ads.jpg" download ><img src="ads.gif" alt="ads" width="120%"> </a>
+<a href="ads.jpg" download ><img src="ads.jpg" alt="ads" width="120%"> </a>
 </div>
 
 <!-- Overlay -->
