--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ button:hover::before {
    <br> 
    হাজার টাকার গাইড, টেস্টপেপার ও প্রশ্নব্যাংকের বিকল্প এখন
 CHORCHA APP <br>
-যে কোনো সাবস্ক্রিপশন এ ২০% ডিসকাউন্ট পেতে <br> প্রোমো কোর্ডটি ব্যবহার করুন - <br> "dgcc20"
+যে কোনো সাবস্ক্রিপশন এ ২০% ডিসকাউন্ট পেতে <br> প্রোমো কোর্ডটি ব্যবহার করুন - <br> <mark> "dgcc20"</mark>
    </p>
-   <img src="ads.jpg" alt="ads" width="100%">
+ <a> href="ads.gif" download <img src="ads.jpg" alt="ads" width="100%"></a>
   <h5>page visitors : </h5>   
  <h5 align"center"> <a> <img src="https://counter11.optistats.ovh/private/freecounterstat.php?c=rqb8amr36ynzhc3uehtmawuul58yd6pw" border="0" title="free web counter" alt="web counter"></a></h5>
  <p>................</p>
