--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             color: #DEF2F1 ;
             text-decoration: none;
             padding: 10px;
-            font-size: 28px;
+            font-size: 30px;
             font-weight: bold;
             transition: background-color 0.3s ease;
             border-radius: 5px;
@@ -81,7 +81,8 @@
             color: #333;
         }
         h3{
-          color: white;
+          color: #222;
+font-family: "Lucida Console", Courier, monospace; 
         }
         p {
             line-height: 1.6;
@@ -172,11 +173,12 @@ button:hover::before {
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
+        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হতে পারে আগামী ১২ই মে, তবে তা নির্ভর করছে প্রধানমন্ত্রী উপরে। </mark> </marquee>
     <div id="content">
-    <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হতে পারে আগামী ১১ই মে, তবে তা নির্ভর করছে প্রধানমন্ত্রী উপরে। </mark> </marquee>
+
         <h2 style="color:Purple">Welcome!</h2>
         <p>এই ওয়েবসাইটটির মাধ্যমে আপনারা দিনাজপুর বোর্ডের এসএসসি (SSC)
-        এবং এইচএসসি (HSC) বোর্ড পরীক্ষার ফলাফল এবং মার্কশিট দেখতে পারবেন | </p>
+        এবং এইচএসসি (HSC) বোর্ড পরীক্ষার ফলাফল এবং মার্কশিট দেখতে পারবেন | <br> এবং এইচএসসি/আলিম/সমমান, জেএসসি/জেডিসি, এসএসসি/দাখিল, এসএসসি (ভোকেশনাল),এইচএসসি/আলিম,এইচএসসি (ভোকেশনাল),এইচএসসি (বিএম),ডিপ্লোমা ইন কমার্স, ডিপ্লোমা ইন বিজনেস,  স্টাডিজ এর ফলাফলও দেখতে পারবেন | </p>
     <h1>নির্দেশনা- </h1>
       <h3>✪ SSC</h3>
     <p> SSC পরীক্ষার ফলাফল ও মার্কশিট দেখতে এখানে ক্লিক করুন - </p>
