--- a/feedback.html
+++ b/feedback.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">  
-    <title></title>
+    <title>Review</title>
  <style>
    #feedback {
   max-width: 60%;
@@ -340,7 +340,7 @@ fieldset[disabled] a.btn {
   </head>
   <body>
      <script src="https://use.fontawesome.com/a6f0361695.js"></script>
-
+<h3><a href="index.html">Home </a></h3>
 <h2 id="fh2">WE APPRECIATE YOUR REVIEW!</h2>
 <h4 id="fh4">Your review will help us improve our customer service and user-friendliness standards.</h4>
 
