--- a/feedback.html
+++ b/feedback.html
@@ -382,7 +382,7 @@ fieldset[disabled] a.btn {
   <div class="col-md-4 inputGroupContainer">
   <div class="input-group">
   <span class="input-group-addon"><i class="fa fa-heart"></i></span>
-   <select class="form-control" id="rate">
+   <select class="form-control" id=option name="Rate ">
       <option value="1star">1</option>
       <option value="2stars">2</option>
       <option value="3stars">3</option>
