--- a/feedback.html
+++ b/feedback.html
@@ -383,11 +383,12 @@ fieldset[disabled] a.btn {
   <div class="input-group">
   <span class="input-group-addon"><i class="fa fa-heart"></i></span>
    <select class="form-control" id=option name="Rate ">
-      <option value="1star">1</option>
-      <option value="2stars">2</option>
-      <option value="3stars">3</option>
-      <option value="4stars">4</option>
-      <option value="5stars">5</option>
+     <option value="">Rating </option>
+      <option>𓆩🖤𓆪</option>
+      <option>𓆩🖤𓆪𓆩🖤𓆪</option>
+      <option>𓆩🖤𓆪𓆩🖤𓆪𓆩🖤𓆪</option>
+      <option >𓆩🖤𓆪𓆩🖤𓆪𓆩🖤𓆪𓆩🖤𓆪</option>
+      <option >𓆩🖤𓆪𓆩🖤𓆪𓆩🖤𓆪𓆩🖤𓆪𓆩🖤𓆪</option>
     </select>
     </div>
   </div>
