--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         footer {
             background-color: #333;
             color: #fff;
-            padding: 10px 20px;
+            padding: 6px 15px;
             text-align: center;
             position: fixed;
             bottom: 0;
@@ -62,7 +62,7 @@
         #content {
             padding: 25px;
             border-radius: 10px;
-            margin: 20px;
+            margin: 0.5px;
             font-family: 'AponaLohit', sans-serif; 
             font-weight: bold;
         }
@@ -90,10 +90,10 @@ font-family: "Lucida Console", Courier, monospace;
 
 
 button {
- width: 9em;
- height: 3em;
+ width: 8em;
+ height: 2.5em;
  border-radius: 30em;
- font-size: 20px;
+ font-size: 22px;
  font-weight: bold;
  font-family: "Poppins", sans-serif;
  border: none;
@@ -107,7 +107,7 @@ button {
 button::before {
  content: '';
  width: 0;
- height: 3em;
+ height: 2.5em;
  border-radius: 30em;
  position: absolute;
  top: 0;
@@ -189,7 +189,7 @@ button:hover::before {
         <h2 style="color:Purple">Welcome!</h2>
         <p>এই ওয়েবসাইটটির মাধ্যমে আপনারা দিনাজপুর বোর্ডের এসএসসি (SSC)
         এবং এইচএসসি (HSC) বোর্ড পরীক্ষার ফলাফল এবং মার্কশিট দেখতে পারবেন | <br> এবং এইচএসসি/আলিম/সমমান, জেএসসি/জেডিসি, এসএসসি/দাখিল, এসএসসি (ভোকেশনাল),এইচএসসি/আলিম,এইচএসসি (ভোকেশনাল),এইচএসসি (বিএম),ডিপ্লোমা ইন কমার্স, ডিপ্লোমা ইন বিজনেস,  স্টাডিজ এর ফলাফলও দেখতে পারবেন | </p>
-    <h1>নির্দেশনা- </h1>
+    <h1><u>নির্দেশনা- </u></h1>
       <h3>✪ SSC</h3>
     <p> SSC পরীক্ষার ফলাফল ও মার্কশিট দেখতে এখানে ক্লিক করুন - </p>
        <a href="#" onclick="showContent('SSC')"> <img src="Ssc.jpg" width="100%"></a>
@@ -275,7 +275,7 @@ CHORCHA APP <br>
 case 'All':
     contentDiv.innerHTML = `
     <h3>Year : 1996-2024</h3>
-    <h4> HSC/Alim/Equivalent <br> JSC/JDC  <br>SSC/Dakhil/SSC(Vocational) <br> HSC/Alim <br> HSC(Vocational) <br>HSC(BM) <br> Diploma in Commerce <br> Diploma in Business Studies</h4>
+    <h4> HSC/Alim/Equivalent <br> JSC/JDC  <br>SSC/Dakhil/SSC(Vocational) <br> HSC/Alim <br> HSC(Vocational) / HSC(BM) <br> Diploma in Commerce <br> Diploma in Business Studies</h4>
 <p align="center"><a href="http://www.educationboardresults.gov.bd/"> <button>
 View Result 
 </button></a>
