--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         footer {
             background-color: #333;
             color: #fff;
-            padding: 6px 15px;
+            padding: 1px 1px;
             text-align: center;
+            font-size: 11px;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -119,7 +120,7 @@ button::before {
 }
 
 button:hover::before {
- width: 9em;
+ width: 8em;
 }
 
 
@@ -208,7 +209,7 @@ button:hover::before {
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হতে পারে আগামী ১২ই মে, তবে তা নির্ভর করছে প্রধানমন্ত্রী উপরে। </mark> </marquee>
+        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হতে পারে আগামী ১২ই মে, তবে তা নির্ভর করছে প্রধানমন্ত্রী উপরে। ✪ HSC 2024 - আগামী ৩০ জুন থেকে সব বোর্ডের HSC/সমমান পরীক্ষা একযোগে শুরু হবে।</mark> </marquee>
     <div id="content">
 
  
