--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ button:hover::before {
     z-index: 9999;
   }
   /* Overlay styles */
+  .overlay h1{
+    font-size:25px; 
+    font-family: 'AponaLohit', sans-serif;
+  }
   .overlay {
     display: none;
     position: fixed;
@@ -152,9 +156,9 @@ button:hover::before {
     right: 0px;
     cursor: pointer;
     font-size: 10px;
+    color:white;
     font-weight: bold;
-    color: black;
-    padding: 5px;
+    padding: 8px;
     background: red;
   }
   .close-btn:hover {
@@ -209,7 +213,7 @@ button:hover::before {
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হতে পারে আগামী ১২ই মে, তবে তা নির্ভর করছে প্রধানমন্ত্রী উপরে। ✪ HSC 2024 - আগামী ৩০ জুন থেকে সব বোর্ডের HSC/সমমান পরীক্ষা একযোগে শুরু হবে।</mark> </marquee>
+        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হবে আগামী ১২ই মে, ২০২৪ইং ✪ HSC 2024 - আগামী ৩০ জুন থেকে সব বোর্ডের HSC/সমমান পরীক্ষা একযোগে শুরু হবে।</mark> </marquee>
     <div id="content">
 
  
@@ -217,7 +221,7 @@ button:hover::before {
 <h2 style="color:black">Welcome!</h2>  
         <p>এই ওয়েবসাইটটির মাধ্যমে আপনারা দিনাজপুর বোর্ডের এসএসসি (SSC)
         এবং এইচএসসি (HSC) বোর্ড পরীক্ষার ফলাফল এবং মার্কশিট দেখতে পারবেন | <br> এবং এইচএসসি/আলিম/সমমান, জেএসসি/জেডিসি, এসএসসি/দাখিল, এসএসসি (ভোকেশনাল),এইচএসসি/আলিম,এইচএসসি (ভোকেশনাল),এইচএসসি (বিএম),ডিপ্লোমা ইন কমার্স, ডিপ্লোমা ইন বিজনেস,  স্টাডিজ এর ফলাফলও দেখতে পারবেন | </p>
-    <h1><u>নির্দেশনা- </u></h1>
+    <h1 style="color:yellow"><u>নির্দেশনা- </u></h1>
       <h3>✪ SSC</h3>
     <p> SSC পরীক্ষার ফলাফল ও মার্কশিট দেখতে এখানে ক্লিক করুন - </p>
        <a href="#" onclick="showContent('SSC')"> <img src="Ssc.jpg" width="100%"></a>
@@ -235,7 +239,10 @@ button:hover::before {
 CHORCHA APP <br>
 যে কোনো সাবস্ক্রিপশন এ ২০% ডিসকাউন্ট পেতে <br> প্রোমো কোর্ডটি ব্যবহার করুন - <br> <mark>"dgcc20"</mark>
    </p>
- <a href="ads.gif" download><img src="ads.jpg" alt="ads" width="100%"></a>
+ <a href="Cads.mp4" download><video controls autoplay width="90%" height="50%">
+  <source src="Cads.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video></a>
   <h5>page visitors : </h5>   
  <h5 align"center"> <a> <img src="https://counter11.optistats.ovh/private/freecounterstat.php?c=rqb8amr36ynzhc3uehtmawuul58yd6pw" border="0" title="free web counter" alt="web counter"></a></h5>
     </div>
@@ -244,13 +251,13 @@ CHORCHA APP <br>
 
  <!-- Popup content -->
 <div id="popup" class="popup">
-  <a class="close-btn" onclick="closePopup()">X</a> <br>
-<a href="ads.gif" download ><img src="ads.gif" alt="ads" width="120%"> </a>
+  <a class="close-btn" onclick="closePopup()">Skip▶⏯</a> <br>
+<a href="Cads.mp4" download ><img src="Cad.png" alt="ads" width="110%"> </a>
 </div>
 
 <!-- Overlay -->
 <div id="overlay" class="overlay">
-  <h1 align="center"> <mark>ক্লাস যেখানেই করোনা কেনো,পরীক্ষা দাও দেশ সেরা এক্সাম প্ল্যাটফর্মে!<br> 20% Discount <br> "dgcc20"</mark></h1>
+  <h1 align="center"> <mark>ক্লাস যেখানেই করোনা কেনো,পরীক্ষা দাও দেশ সেরা এক্সাম প্ল্যাটফর্মে!<br> ২০% ছাড়ে সাবস্ক্রিপশন পেতে কুপন ব্যবহার করুন - "dgcc20"</mark></h1>
 </div>     
 
   <h4 style="color:white"><pre>© Developed by <a style="color:#FFE4E1" href="https://www.facebook.com/mdmehedialhasansawon">Mehedi Al Hasan Sawon</pre> </a></h4>
