--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@ button:hover::before {
     color: blue ;
     font-size: 13px;
   }
-  
-  
+
+
 #quote {
         font-size: 18px;
         font-family: 'AponaLohit', sans-serif;
@@ -193,9 +193,9 @@ button:hover::before {
     border-radius: 70px;
     transition: background-color 0.3s;
   }  
-  
-  
-  
+
+
+
 </style>
 </head>
 <body>
@@ -216,7 +216,7 @@ button:hover::before {
         <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হবে আগামী ১২ই মে, ২০২৪ইং ✪ HSC 2024 - আগামী ৩০ জুন থেকে সব বোর্ডের HSC/সমমান পরীক্ষা একযোগে শুরু হবে।</mark> </marquee>
     <div id="content">
 
- 
+
   <div id="quote"></div>
 <h2 style="color:black">Welcome!</h2>  
         <p>এই ওয়েবসাইটটির মাধ্যমে আপনারা দিনাজপুর বোর্ডের এসএসসি (SSC)
@@ -252,7 +252,7 @@ CHORCHA APP <br>
  <!-- Popup content -->
 <div id="popup" class="popup">
   <a class="close-btn" onclick="closePopup()">Skip▶⏯</a> <br>
-<a href="Cads.mp4" download ><img src="Cad.png" alt="ads" width="110%"> </a>
+<a href="Cads.mp4" download="CHORCHA subscription 20% Discount Code - dgcc20"><img src="Cad.png" alt="ads" width="110%"> </a>
 </div>
 
 <!-- Overlay -->
@@ -386,9 +386,9 @@ function displayQuote() {
 // Display initial quote
 displayQuote();
 
-  
-  
-  
+
+
+
     </script>
 </body>
 </html> 
