--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="Dinajpur Board Result with Marksheed">
+<meta property="og:title" content="Dinajpur Board Result with Marksheet">
 <meta property="og:description" content="এই ওয়েবসাইটটির মাধ্যমে আপনারা দিনাজপুর বোর্ডের এসএসসি (SSC)
         এবং এইচএসসি (HSC) বোর্ড পরীক্ষার ফলাফল এবং মার্কশিট দেখতে পারেন।">
     <meta property="og:image" content="Dbr.jpg">
@@ -213,7 +213,7 @@ button:hover::before {
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হবে আগামীকাল ১২ই মে, সকাল ১১ টায় ✪ HSC 2024 - আগামী ৩০ জুন থেকে সব বোর্ডের HSC/সমমান পরীক্ষা একযোগে শুরু হবে।</mark> </marquee>
+        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হবে আজকে ১২ই মে, সকাল ১১ টায় ✪ HSC 2024 - আগামী ৩০ জুন থেকে সব বোর্ডের HSC/সমমান পরীক্ষা একযোগে শুরু হবে।</mark> </marquee>
     <div id="content">
 
 
