--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ button:hover::before {
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হবে আজকে ১২ই মে, সকাল ১১ টায় ✪ HSC 2024 - আগামী ৩০ জুন থেকে সব বোর্ডের HSC/সমমান পরীক্ষা একযোগে শুরু হবে।</mark> </marquee>
+        <marquee style="background-color:brown"> <mark> ✪ SSC 2024 ফলাফল প্রকাশ করা হবে কিছুক্ষণ এর মধ্যে...</mark> </marquee>
     <div id="content">
 
 
@@ -249,16 +249,16 @@ CHORCHA APP <br>
 
     <footer>
 
- <!-- Popup content -->
+ <!-- Popup content 
 <div id="popup" class="popup">
-  <a class="close-btn" onclick="closePopup()">Skip▶⏯</a> <br>
+  <a class="close-btn" onclick="closePopup()">Skip ad ▶⏯</a> <br>
 <a href="Cads.mp4" download="CHORCHA subscription 20% Discount Code - dgcc20"><img src="Cad.png" alt="ads" width="110%"> </a>
 </div>
 
-<!-- Overlay -->
+<!-- Overlay 
 <div id="overlay" class="overlay">
   <h1 align="center"> <mark>ক্লাস যেখানেই করোনা কেনো,পরীক্ষা দাও দেশ সেরা এক্সাম প্ল্যাটফর্মে!<br> ২০% ছাড়ে সাবস্ক্রিপশন পেতে কুপন ব্যবহার করুন - "dgcc20"</mark></h1>
-</div>     
+</div>   --->  
 
   <h4 style="color:white"><pre>© Developed by <a style="color:#FFE4E1" href="https://www.facebook.com/mdmehedialhasansawon">Mehedi Al Hasan Sawon</pre> </a></h4>
     </footer>
