--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ CHORCHA APP <br>
             switch(page) {
                 case 'SSC':
     contentDiv.innerHTML = `
-<p align="center"><a href="#"> <button> SSC - 2024
+<p align="center"><a href="https://eboardresults.com/bn/ebr.app/home/"> <button> SSC - 2024
 </button></a>
 </p>
 <p align="center"><a href="http://result.dinajpurboard.gov.bd/sscresult2023/search/each.php"> <button> SSC - 2023
