--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ button:hover::before {
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:brown"> <mark> ✪ চলতি এসএসসি পরীক্ষায় গড় পাস করেছে ৮৩ দশমিক ০৪ শতাংশ শিক্ষার্থী। </mark> </marquee>
+        <marquee style="background-color:brown"> <mark> ✪ দিনাজপুর বোর্ড এ পাশের হার - ৭৮.০৪ % ✪ চলতি এসএসসি পরীক্ষায় গড় পাস করেছে ৮৩ দশমিক ০৪ শতাংশ শিক্ষার্থী। </mark> </marquee>
     <div id="content">
 
 
