--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@ button:hover::before {
     transition: background-color 0.3s;
   }  
 
-
+marquee{
+  font-family: 'AponaLohit', sans-serif;
+font-weight: bold;
+  
+}
 
 </style>
 </head>
@@ -213,7 +217,7 @@ button:hover::before {
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:brown"> <mark> ✪ দিনাজপুর বোর্ড এ পাশের হার - ৭৮.০৪ % ✪ চলতি এসএসসি পরীক্ষায় গড় পাস করেছে ৮৩ দশমিক ০৪ শতাংশ শিক্ষার্থী। </mark> </marquee>
+        <marquee style="background-color:brown"> <mark> ✪ দিনাজপুর বোর্ড এ পাশের হার - ৭৮.০৪ % ✪ চলতি এসএসসি পরীক্ষায় গড় পাস করেছে ৮৩.০৪ শতাংশ শিক্ষার্থী। ✪ এসএসসি ও সমমান পরীক্ষার ফলে এগিয়ে আছেন ছাত্রীরা। </mark> </marquee>
     <div id="content">
 
 
