--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ font-weight: bold;
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:brown"> <mark> ✪ দিনাজপুর বোর্ড এ পাশের হার - ৭৮.০৪ % ✪ চলতি এসএসসি পরীক্ষায় গড় পাস করেছে ৮৩.০৪ শতাংশ শিক্ষার্থী। ✪ এসএসসি ও সমমান পরীক্ষার ফলে এগিয়ে আছেন ছাত্রীরা। </mark> </marquee>
+        <marquee style="background-color:brown"> <mark> ✪ মোট জিপিএ-৫ পেয়েছেন ১ লাখ ৮২ হাজার ১২৯ জন ✪ দিনাজপুর বোর্ড এ পাশের হার - ৭৮.০৪ % ✪ চলতি এসএসসি পরীক্ষায় গড় পাস করেছে ৮৩.০৪ শতাংশ শিক্ষার্থী। ✪ এসএসসি ও সমমান পরীক্ষার ফলে এগিয়ে আছেন ছাত্রীরা। </mark> </marquee>
     <div id="content">
 
 
@@ -273,7 +273,7 @@ CHORCHA APP <br>
             switch(page) {
                 case 'SSC':
     contentDiv.innerHTML = `
-<p align="center"><a href="https://eboardresults.com/bn/ebr.app/home/"> <button> SSC - 2024
+<p align="center"><a href="http://result.dinajpurboard.gov.bd/ssc_result_2024/search/each.php"> <button> SSC - 2024
 </button></a>
 </p>
 <p align="center"><a href="http://result.dinajpurboard.gov.bd/sscresult2023/search/each.php"> <button> SSC - 2023
