--- a/index.html
+++ b/index.html
@@ -1,398 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="Dinajpur Board Result with Marksheet">
-<meta property="og:description" content="এই ওয়েবসাইটটির মাধ্যমে আপনারা দিনাজপুর বোর্ডের এসএসসি (SSC)
-        এবং এইচএসসি (HSC) বোর্ড পরীক্ষার ফলাফল এবং মার্কশিট দেখতে পারেন।">
-    <meta property="og:image" content="Dbr.jpg">
-<link rel="icon" href="Dbr.jpg"/>    
-    <title>Dinajpur Board Individual Student Result</title>
-    <style>
-
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-@import url('https://fonts.maateen.me/apona-lohit/font.css');  
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #99E1D9;
-            color: #333;
-        }
-        header {
-            background-color: #E81750;
-            color: black;
-            padding: 10px 0;
-            text-align: center;
-        }
-        h1{
-          color: #fff;
-        }
-        nav {
-            background-color:  #17252A;
-            padding: 10px 20px;
-            text-align: center;
-            border-bottom: 2px solid #333;
-        }
-        nav a {
-            color: #DEF2F1 ;
-            text-decoration: none;
-            padding: 10px;
-            font-size: 30px;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-            border-radius: 5px;
-        }
-        nav a:hover {
-            background-color: #04449c;
-            padding:10px;
-            color: yellow;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 1px 1px;
-            text-align: center;
-            font-size: 11px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        #content {
-            padding: 25px;
-            border-radius: 10px;
-            margin: 0.5px;
-            font-family: 'AponaLohit', sans-serif; 
-            font-weight: bold;
-        }
-      #content h2 {
-           color: brown ;
-        }  
-        #content h3 {
-           color: blue ;
-           font-size: 25px;
-        }
-      #content h5 {
-           color: #888;
-           font-family: "Lucida Console", Courier, monospace; 
-        }  
-        h2 {
-            color: #333;
-        }
-        h3{
-          color: #222;
-font-family: "Lucida Console", Courier, monospace; 
-        }
-        p {
-            line-height: 1.6;
-        }
-
-
-button {
- width: 8em;
- height: 2.5em;
- border-radius: 30em;
- font-size: 22px;
- font-weight: bold;
- font-family: "Poppins", sans-serif;
- border: none;
- position: relative;
- overflow: hidden;
- z-index: 1;
- box-shadow: 6px 6px 12px #c5c5c5,
-             -6px -6px 12px #333;
-}
-
-button::before {
- content: '';
- width: 0;
- height: 2.5em;
- border-radius: 30em;
- position: absolute;
- top: 0;
- left: 0;
- background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
- transition: .5s ease;
- display: block;
- z-index: -1;
-}
-
-button:hover::before {
- width: 8em;
-}
-
-
-  .popup {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 0px;
-    border-radius: 0px;
-    z-index: 9999;
-  }
-  /* Overlay styles */
-  .overlay h1{
-    font-size:25px; 
-    font-family: 'AponaLohit', sans-serif;
-  }
-  .overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9998;
-  }
-  /* Close button styles */
-  .close-btn {
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    cursor: pointer;
-    font-size: 10px;
-    color:white;
-    font-weight: bold;
-    padding: 8px;
-    background: red;
-  }
-  .close-btn:hover {
-    color: red;
-  }
-.fd a{
-    background-color: #00ff00;
-    text-decoration: none;
-    border-radius: 5%;
-    color: blue ;
-    font-size: 13px;
-  }
-
-
-#quote {
-        font-size: 18px;
-        font-family: 'AponaLohit', sans-serif;
-
-        color: Purple;
-        font-style: italic;
-        font-weight: bold;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Icon Button Notification Badge</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+    body {
+      margin: 25px;
+      display: flex;
+      justify-content: flex-end; /* Align icon button to the right */
     }
 
-    .info-icon {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    cursor: pointer;
-    z-index: 9999;
-    color: white;
-    background-color: black ;
-    border-radius: 70px;
-    transition: background-color 0.3s;
-  }  
+    .icon-button {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50px;
+      height: 50px;
+      color: #fff; /* Changed icon color to white */
+      background: #4CAF50; /* Changed button background color */
+      border: none;
+      outline: none;
+      border-radius: 50%;
+      font-size: 24px; /* Increased font size for icon */
+      transition: background 0.3s ease; /* Added transition for smoother hover effect */
+    }
 
-marquee{
-  font-family: 'AponaLohit', sans-serif;
-font-weight: bold;
-  
-}
+    /* Animation keyframes */
+    @keyframes bounce {
+      0% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-5px);
+      }
+      100% {
+        transform: translateY(0);
+      }
+    }
 
-</style>
+    /* Apply animation on hover */
+    .icon-button:hover .material-icons {
+      animation: bounce 0.5s infinite;
+    }
+
+    .icon-button:hover {
+      cursor: pointer;
+      background: #45a049; /* Darker green on hover */
+    }
+
+    .icon-button:active {
+      background: #3e8e41; /* Even darker green on click */
+    }
+
+    .icon-button__badge {
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      width: 20px; /* Reduced badge size */
+      height: 20px; /* Reduced badge size */
+      background: red;
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+      font-size: 12px; /* Reduced font size for badge number */
+    }
+
+    /* Popup styling */
+    .popup {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+      z-index: 9999;
+    }
+
+    .popup-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* Increased shadow for a lifted effect */
+      max-width: 400px; /* Set max-width to prevent it from stretching too wide */
+      width: 90%; /* Responsive width */
+      text-align: center; /* Center align content */
+    }
+
+    .popup-content h2 {
+      color: #333; /* Darker text color */
+      margin-bottom: 10px;
+    }
+
+    .popup-content p {
+      color: #555; /* Slightly darker text color */
+      margin-bottom: 20px;
+    }
+
+    .popup-content button {
+      background-color: #4CAF50; /* Green button color */
+      color: #fff; /* White text color */
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease; /* Smooth transition on hover */
+    }
+
+    .popup-content button:hover {
+      background-color: #45a049; /* Darker green on hover */
+    }
+  </style>
 </head>
+
 <body>
-    <header>
-        <h1>DINAJPUR BOARD </h1>
-        <h3>Individual Student Result</h3>
-<div class="fd">
-  <p style="color:#fff  "> Give us your ☞ <a href="feedback">Feedback</a></p>
-</div>
-    </header>
-    <nav>
-        <a href="#" onclick="showContent('SSC')">SSC</a>
-       <a>|</a> 
-        <a href="#" onclick="showContent('HSC')">HSC</a> 
-        <a>|</a>
-       <a href="#" onclick="showContent('All')">All </a> 
-    </nav>
-        <marquee style="background-color:brown"> <mark> ✪ মোট জিপিএ-৫ পেয়েছেন ১ লাখ ৮২ হাজার ১২৯ জন ✪ দিনাজপুর বোর্ড এ পাশের হার - ৭৮.০৪ % ✪ চলতি এসএসসি পরীক্ষায় গড় পাস করেছে ৮৩.০৪ শতাংশ শিক্ষার্থী। ✪ এসএসসি ও সমমান পরীক্ষার ফলে এগিয়ে আছেন ছাত্রীরা। </mark> </marquee>
-    <div id="content">
+  <button type="button" class="icon-button" id="notificationBtn">
+    <span class="material-icons">notifications</span>
+    <span class="icon-button__badge">2</span>
+  </button>
 
-
-  <div id="quote"></div>
-<h2 style="color:black">Welcome!</h2>  
-        <p>এই ওয়েবসাইটটির মাধ্যমে আপনারা দিনাজপুর বোর্ডের এসএসসি (SSC)
-        এবং এইচএসসি (HSC) বোর্ড পরীক্ষার ফলাফল এবং মার্কশিট দেখতে পারবেন | <br> এবং এইচএসসি/আলিম/সমমান, জেএসসি/জেডিসি, এসএসসি/দাখিল, এসএসসি (ভোকেশনাল),এইচএসসি/আলিম,এইচএসসি (ভোকেশনাল),এইচএসসি (বিএম),ডিপ্লোমা ইন কমার্স, ডিপ্লোমা ইন বিজনেস,  স্টাডিজ এর ফলাফলও দেখতে পারবেন | </p>
-    <h1 style="color:yellow"><u>নির্দেশনা- </u></h1>
-      <h3>✪ SSC</h3>
-    <p> SSC পরীক্ষার ফলাফল ও মার্কশিট দেখতে এখানে ক্লিক করুন - </p>
-       <a href="#" onclick="showContent('SSC')"> <img src="Ssc.jpg" width="100%"></a>
-
-    <h3>✪ HSC</h3>
-    <p> HSC পরীক্ষার ফলাফল ও মার্কশিট দেখতে এখানে ক্লিক করুন - </p>
-       <a href="#" onclick="showContent('HSC')"> <img src="Hsc.jpg" width="100%"></a>
-  <h3>✪ All</h3>
-    <p> এইচএসসি/আলিম/সমমান,জেএসসি/জেডিসি,এসএসসি/দাখিল,এসএসসি(ভোকেশনাল),এইচএসসি/আলিম,এইচএসসি(ভোকেশনাল),এইচএসসি(বিএম), ডিপ্লোমা ইন কমার্স, ডিপ্লোমা ইন বিজনেস স্টাডিজ পরীক্ষার ফলাফল ও মার্কশিট দেখতে এখানে ক্লিক করুন - </p>
-       <a href="#" onclick="showContent('All')"> <img src="All.jpg" width="100%"></a>
-
-   <p style="color:blue "> Sponsor ◑
-   <br> 
-   হাজার টাকার গাইড, টেস্টপেপার ও প্রশ্নব্যাংকের বিকল্প এখন
-CHORCHA APP <br>
-যে কোনো সাবস্ক্রিপশন এ ২০% ডিসকাউন্ট পেতে <br> প্রোমো কোর্ডটি ব্যবহার করুন - <br> <mark>"dgcc20"</mark>
-   </p>
- <a href="Cads.mp4" download><video controls autoplay width="90%" height="50%">
-  <source src="Cads.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video></a>
-  <h5>page visitors : </h5>   
- <h5 align"center"> <a> <img src="https://counter11.optistats.ovh/private/freecounterstat.php?c=rqb8amr36ynzhc3uehtmawuul58yd6pw" border="0" title="free web counter" alt="web counter"></a></h5>
+  <!-- Popup content -->
+  <div class="popup" id="popup">
+    <div class="popup-content">
+      <h2>Notification Popup</h2>
+      <p>This is the notification popup content.</p>
+      <button onclick="closePopup()">Close</button>
     </div>
+  </div>
 
-    <footer>
-
- <!-- Popup content 
-<div id="popup" class="popup">
-  <a class="close-btn" onclick="closePopup()">Skip ad ▶⏯</a> <br>
-<a href="Cads.mp4" download="CHORCHA subscription 20% Discount Code - dgcc20"><img src="Cad.png" alt="ads" width="110%"> </a>
-</div>
-
- Overlay 
-<div id="overlay" class="overlay">
-  <h1 align="center"> <mark>ক্লাস যেখানেই করোনা কেনো,পরীক্ষা দাও দেশ সেরা এক্সাম প্ল্যাটফর্মে!<br> ২০% ছাড়ে সাবস্ক্রিপশন পেতে কুপন ব্যবহার করুন - "dgcc20"</mark></h1>   --->  
-</div>  
-
-  <h4 style="color:white"><pre>© Developed by <a style="color:#FFE4E1" href="https://www.facebook.com/mdmehedialhasansawon">Mehedi Al Hasan Sawon</pre> </a></h4>
-    </footer>
-
-    <script>
-        function showContent(page) {
-            const contentDiv = document.getElementById('content');
-            switch(page) {
-                case 'SSC':
-    contentDiv.innerHTML = `
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/ssc_result_2024/search/each.php"> <button> SSC - 2024
-</button></a>
-</p>
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/sscresult2023/search/each.php"> <button> SSC - 2023
-</button></a>
-</p>
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/ssc_result2022/search/each.php"> <button> SSC - 2022
-</button></a>
-</p>
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/ssc_result2021/search/each.php"> <button> SSC - 2021
-</button></a>
-</p>
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/ssc_res_2020/search/each.php"> <button> SSC - 2020
-</button></a>
-</p>
-        `;
-    break;
-
-  case 'HSC':
-    contentDiv.innerHTML = `
-<p align="center"><a href="#"> <button> HSC - 2024
-</button></a>
-</p>
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/hsc_result2023/search/each.php"> <button> HSC - 2023
-</button></a>
-</p>
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/hsc_result2022/search/each.php"> <button> HSC - 2022
-</button></a>
-</p>
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/hsc_result2021/search/each.php"> <button> HSC - 2021
-</button></a>
-</p>
-<p align="center"><a href="http://result.dinajpurboard.gov.bd/hsc_result2020/search/each.php"> <button> HSC - 2020
-</button></a>
-</p>
-        `;
-    break;
-case 'All':
-    contentDiv.innerHTML = `
-    <h3>Year : 1996-2024</h3>
-    <h4> HSC/Alim/Equivalent <br> JSC/JDC  <br>SSC/Dakhil/SSC(Vocational) <br> HSC/Alim <br> HSC(Vocational) / HSC(BM) <br> Diploma in Commerce <br> Diploma in Business Studies</h4>
-<p align="center"><a href="http://www.educationboardresults.gov.bd/"> <button>
-View Result 
-</button></a>
-</p>
-    `;
-    break;
-                default:
-                    contentDiv.innerHTML = '<h2>';
-            }
-        }
-
-
-   // Function to display the popup ad
-  function showPopup() {
-    document.getElementById("popup").style.display = "block";
-    document.getElementById("overlay").style.display = "block";
-  }
-
-  // Function to close the popup ad
-  function closePopup() {
-    document.getElementById("popup").style.display = "none";
-    document.getElementById("overlay").style.display = "none";
-  }
-
-  // Show the popup ad after 3 seconds (for demonstration purposes)
-  setTimeout(showPopup, 1000);
-
-
-
-
-const quotes = [
-    "মানুষের জন্ম হয় সফলতার জন্য, ব্যর্থতার জন্য নয়। - হেনরি ডেভিড থরো।",
-    "ব্যর্থ হওয়ার নানা উপায় আছে, কিন্তু সফল হওয়ার উপায় একটাই; এবং তা হলো কঠোর পরিশ্রম। - এরিস্টটল",
-    "ধৈর্য্যই হলো সফলতার প্রধান শর্ত। - বিল গেটস ",
-    "সফলতা মানে উৎসাহ না হারিয়ে একটার পর একটা ব্যর্থতাকে পার করে যাওয়া। - উইনস্টন চার্চিল",
-    "পরিশ্রম কখনো কাউকে ধোকা দেয় না এবং পূর্বেও দেয় নি। — হাকিম্যান হিকিগায়া",
-    "পরিশ্রম মেধাকেও হার মানিয়ে দেয় যখন মেধা পরিশ্রম করতে ভুলে যায়। — টিম নটকে",
-    "যদি তুমি পরিশ্রমকে নিজের অস্ত্র বানিয়ে নিতে পারো তবে সাফল্য অবশ্যই তোমার চাকরে পরিণত হবে।",
-    "পৃথিবীতে সবচাইতে কঠিন কাজ হলো নিজে সংশোধন হওয়া, আর সবচাইতে সহজ কাজ হলো অন্যের সমালোচনা করা । — হযরত আলী (রাঃ)",
-    "ধ্বংস তার জন্য, যার আজকের দিনটা গতকালের চেয়ে উত্তম হলো না । — আল কোরআন", 
-    "মানুষের মনে এমন ভাবে নিজের জন্য জায়গা করে নাও, যেন তুমি মরে গেলে তোমার জন্য তারা দোয়া করে , আর বেঁচে থাকে তোমাকে ভালোবাসে। — হযরত আলী (রাঃ)",
-    "দয়া বিশ্বাসীর একটি চিহ্ন; যার দয়া নেই, তার মাঝে বিশ্বাস (ঈমান) নেই| – মুসলিম",
-    "সময়ে সত্য বল – এমনকি যদিও তা অন্যদের কাছে কঠিন ও অপছন্দনীয় হয়",
-    "প্রতিটি মানুষ তার কাজের সেই ফলই পাবে,যা সে নিয়্যত করেছে। – বুখারী",
-    "যার দুটি দিন একই রকম কাটলো, সে ক্ষতিগ্রস্ত হলো। – আল হাদিস",
-    "যে জ্ঞানের সন্ধানে বের হয়, সে আল্লাহর পথে বের হয়। (তিরমিযী)",
-    "সর্বোত্তম জীবন পদ্ধতি হচ্ছে মুহাম্মদ সাঃ প্রদর্শিত পদ্ধতি। (সহীহ মুসলিম)",
-    "উত্তম চরিত্রের চাইতে বড় মর্যাদা আর নেই। (ইবনে হিব্বান)",
-"তোমাদের মধ্যে সবচেয়ে ভালো মানুষ তারা,যাদের আচার ব্যবহার সবচেয়ে ভালো। (সহীহ বুখারী)",
-"যে অংগীকার রক্ষা করেনা, তার ধর্ম নেই। (মিশকাত)",
-"দান হচ্ছে একটি প্রমাণ। (সহীহ মুসলিম)",
-"সত্য দেয় মনের শান্তি আর মিথ্যা দেয় সংশয়। (তিরমিযী)",
-];
-
-function typeWriter(text, i, fnCallback) {
-    if (i < text.length) {
-        document.getElementById("quote").innerHTML = text.substring(0, i+1);
-        setTimeout(function() {
-            typeWriter(text, i + 1, fnCallback)
-        }, 100);
-    } else if (typeof fnCallback == 'function') {
-        setTimeout(fnCallback, 1000);
+  <script>
+    // Function to open the popup
+    function openPopup() {
+      document.getElementById("popup").style.display = "block";
+      document.querySelector(".icon-button__badge").style.display = "none";
     }
-}
 
-function displayQuote() {
-    const randomIndex = Math.floor(Math.random() * quotes.length);
-    const randomQuote = quotes[randomIndex];
-    typeWriter(randomQuote, 0, function() {
-        // Typing animation complete, do something here if needed
-    });
-}
+    // Function to close the popup
+    function closePopup() {
+      document.getElementById("popup").style.display = "none";
+    }
 
-// Display initial quote
-displayQuote();
-
-
-
-
-    </script>
+    // Event listener for notification button click
+    document.getElementById("notificationBtn").addEventListener("click", openPopup);
+  </script>
 </body>
+
 </html> 
