--- a/index.html
+++ b/index.html
@@ -202,9 +202,11 @@ font-weight: bold;
   
 }
 
-
+table{
+  margin-left: 45px;
+}
     .icon-buttonn {
-      left: 300px; 
+      left: 30px; 
       position: relative;
       display: flex;
       align-items: center;
@@ -322,9 +324,10 @@ font-weight: bold;
     <header>
         <h1>DINAJPUR BOARD </h1>
         <h3>Individual Student Result</h3>
-<div class="fd">
-  <p style="color:#fff  "> Give us your ☞ <a href="feedback">Feedback</a></p>
-  <div class="iconnn">
+<table>
+  <th><div class="fd">
+  <p style="color:#fff  "> Give us your ☞ <a href="feedback">Feedback</a></p> </th>
+  <th> <div class="iconnn">
       <button type="buttonn" class="icon-buttonn" id="notificationBtn">
     <span class="material-icons">notifications</span>
     <span class="icon-buttonn__badge">1</span>
@@ -339,7 +342,9 @@ font-weight: bold;
      <br> <br>
       <button onclick="closePopupp()">Close</button>
     </div>
-  </div>
+  </div></th>
+</table>
+ 
 
   </div>
 </div>
