--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ font-family: "Lucida Console", Courier, monospace;
 marquee{
   font-family: 'AponaLohit', sans-serif;
 font-weight: bold;
-  
+
 }
 
 table{
@@ -303,7 +303,7 @@ table{
     }
 
     .popupp-content button {
-      background-color: #4CAF50; /* Green button color */
+      background-color: red; /* Green button color */
       color: #fff; /* White text color */
       border: none;
       padding: 10px 20px;
@@ -336,15 +336,17 @@ table{
   <!-- Popup content -->
   <div class="popupp" id="popupp">
     <div class="popupp-content">
-      <h3 style="color:blue">Notification</h3>
-      <h2>✪ ২০২৪-২০২৫ শিক্ষাবর্ষে সকল সরকারি ও বেসরকারি কলেজ ও মাদ্রাসায় ভর্তি আবেদন শুরু হবে <br> ২৬ মে ২০২৪ তারিখ থেকে। এখানে সকল আপডেট তথ্য পাওয়া যাবে।</h2>
-     <a href="https://xiclassadmissiongovbd.com/ ">XI Class Admission System 2024-2025 | HSC Admission 2024</a>
+      <h3 style="color:blue"><u>Notification</u></h3>
+<ul>
+  <li type="square">কারিগরি ত্রুটির কারণে রেজাল্ট দেখতে সমস্যা হলে এই ওয়েবসাইটগুলোতে ফলাফল দেখুন - <br>
+  <i><mark><a href="http://www.educationboardresults.gov.bd/">Click here (1) </a></mark>  / <mark> <a href="https://eboardresults.com/en/ebr.app/home/">Click here (2)</a></mark></i></li> <hr>
+</ul>
      <br> <br>
       <button onclick="closePopupp()">Close</button>
     </div>
   </div></th>
 </table>
- 
+
 
   </div>
 </div>
@@ -356,7 +358,7 @@ table{
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:brown"> <mark> ✪ মোট জিপিএ-৫ পেয়েছেন ১ লাখ ৮২ হাজার ১২৯ জন ✪ দিনাজপুর বোর্ড এ পাশের হার - ৭৮.০৪ % ✪ চলতি এসএসসি পরীক্ষায় গড় পাস করেছে ৮৩.০৪ শতাংশ শিক্ষার্থী। ✪ এসএসসি ও সমমান পরীক্ষার ফলে এগিয়ে আছেন ছাত্রীরা। </mark> </marquee>
+        <marquee style="background-color:brown"> <mark>এখানে দিনাজপুর শিক্ষা বোর্ডের সকল পাবলিক পরীক্ষার ফলাফল পাওয়া যায়। প্রয়োজনীয় তথ্য প্রদান করে সহজেই গ্রেডশীট অথবা মার্কশীট (যদি প্রকাশিত থাকে) ডাউনলোড করা যায়।</mark> </marquee>
     <div id="content">
 
 
@@ -376,16 +378,7 @@ table{
     <p> এইচএসসি/আলিম/সমমান,জেএসসি/জেডিসি,এসএসসি/দাখিল,এসএসসি(ভোকেশনাল),এইচএসসি/আলিম,এইচএসসি(ভোকেশনাল),এইচএসসি(বিএম), ডিপ্লোমা ইন কমার্স, ডিপ্লোমা ইন বিজনেস স্টাডিজ পরীক্ষার ফলাফল ও মার্কশিট দেখতে এখানে ক্লিক করুন - </p>
        <a href="#" onclick="showContent('All')"> <img src="All.jpg" width="100%"></a>
 
-   <p style="color:blue "> Sponsor ◑
-   <br> 
-   হাজার টাকার গাইড, টেস্টপেপার ও প্রশ্নব্যাংকের বিকল্প এখন
-CHORCHA APP <br>
-যে কোনো সাবস্ক্রিপশন এ ২০% ডিসকাউন্ট পেতে <br> প্রোমো কোর্ডটি ব্যবহার করুন - <br> <mark>"dgcc20"</mark>
-   </p>
- <a href="Cads.mp4" download><video controls autoplay width="90%" height="50%">
-  <source src="Cads.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video></a>
+
   <h5>page visitors : </h5>   
  <h5 align"center"> <a> <img src="https://counter11.optistats.ovh/private/freecounterstat.php?c=rqb8amr36ynzhc3uehtmawuul58yd6pw" border="0" title="free web counter" alt="web counter"></a></h5>
     </div>
