--- a/index.html
+++ b/index.html
@@ -468,12 +468,13 @@ table{
   <a class="close-btn" onclick="closePopup()">Skip ad ⏯</a> <br>
 <img src="ad.jpg" alt="ad" width="140%">
 <br> <br> <br>
-    <a href="" target="_blank" class="button-85">Registration now...</a>
+ <!---   <a href="" target="_blank" class="button-85">Registration now...</a> --->
 </div>
 
  <!--- Overlay --->
 <div id="overlay" class="overlay">
   <h1 align="center"> <mark> বিজ্ঞাপন (Ad)</mark> <br></h1> 
+  <img src="L-logo.png" width="40%">
 </div>  
 
   <h4 style="color:white"><pre>© Developed by <a style="color:#FFE4E1" href="https://www.facebook.com/mdmehedialhasansawon">Mehedi Al Hasan Sawon</pre> </a></h4>
