--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@ table{
         <a>|</a>
        <a href="#" onclick="showContent('All')">All </a> 
     </nav>
-        <marquee style="background-color:green"> <mark>এখানে দিনাজপুর শিক্ষা বোর্ডের সকল পাবলিক পরীক্ষার ফলাফল পাওয়া যায়। প্রয়োজনীয় তথ্য প্রদান করে সহজেই গ্রেডশীট অথবা মার্কশীট (যদি প্রকাশিত থাকে) ডাউনলোড করা যায়। </mark> </marquee>
-        <marquee style="background-color:brown"> <mark>✪ আগামী ১৫-১৯ই অক্টোবরের মধ্যে প্রকাশ করা হতে পারে HSC-24 এর  রেজাল্ট| </mark> </marquee>
+        <marquee style="background-color:green"> <mark>এখানে দিনাজপুর শিক্ষা বোর্ডের সকল পাবলিক পরীক্ষার ফলাফল পাওয়া যায়। প্রয়োজনীয় তথ্য প্রদান করে সহজেই গ্রেডশীট অথবা মার্কশিট (যদি প্রকাশিত থাকে) ডাউনলোড করা যায়। </mark> </marquee>
+        <marquee style="background-color:brown"> <mark>✪ আগামী ১৫ই অক্টোবরে প্রকাশ করা হবে HSC-24 এর  ফলাফল | সহজেই ফলাফল ও মার্কশিট দেখতে আমাদের সাথেই থাকুন।  মার্কশিট প্রকাশ করা হলে এখানে জানানো হবে।</mark> </marquee>
     <div id="content">
 
 
@@ -635,8 +635,8 @@ displayQuote();
 
     // Event listener for notification button click
     document.getElementById("notificationBtn").addEventListener("click", openPopupp);
-  
-  
+
+
     </script>
 </body>
 </html>
