--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ table{
 
   case 'HSC':
     contentDiv.innerHTML = `
-<p align="center"><a href="#"> <button class="button-r"> HSC - 2024
+<p align="center"><a href="https://eboardresults.com/en/ebr.app/home/"> <button class="button-r"> HSC - 2024
 </button></a>
 </p>
 
