--- a/index.html
+++ b/index.html
@@ -474,6 +474,8 @@ table{
         <p>এই ওয়েবসাইটটির মাধ্যমে আপনারা দিনাজপুর বোর্ডের এসএসসি (SSC)
         এবং এইচএসসি (HSC) বোর্ড পরীক্ষার ফলাফল এবং মার্কশিট দেখতে পারবেন | <br> এবং এইচএসসি/আলিম/সমমান, জেএসসি/জেডিসি, এসএসসি/দাখিল, এসএসসি (ভোকেশনাল),এইচএসসি/আলিম,এইচএসসি (ভোকেশনাল),এইচএসসি (বিএম),ডিপ্লোমা ইন কমার্স, ডিপ্লোমা ইন বিজনেস,  স্টাডিজ এর ফলাফলও দেখতে পারবেন | </p>
     <h1 style="color:yellow"><u>নির্দেশনা- </u></h1>
+    <h3>✪ নিজের ফলাফল দেখতে </h3>
+    <img src="r.jpg" width="80%">
     <h3>✪ SMS পদ্ধতি</h3>
     <p>মোবাইল ফোনের মেসেজ অপশনে গিয়ে HSC লিখে স্পেস দিয়ে বোর্ডের নামের প্রথম ৩ অক্ষর লিখে স্পেস দিয়ে রোল নম্বর লিখে আবার স্পেস দিয়ে পাসের বছর লিখে পাঠাতে হবে ১৬২২২ নম্বরে। উদাহরণ— HSC DIN 123456 2024 লিখে পাঠাতে হবে ১৬২২২ নম্বরে। ফিরতি এসএমএসে জানা যাবে ফলাফল।</p>
     <img src="sms.png" width="100%">
